# spine

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLEANUP_SUMMARY.md  CONSOLE_SCRIPT_UPDATE.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  METADATA_GUIDE.md  PR_NOTES.md  PYPI_SETUP_SUMMARY.md  README.md  REMOVING_KEYS_EXAMPLE.md  RESTRUCTURING_SUCCESS_REPORT.md  SRC_MIGRATION_COMPLETE.md  TEST_COVERAGE_SUMMARY.md  TEST_ORGANIZATION_REPORT.md  build_packages.sh  check_coverage.sh  codecov.yml  comprehensive_test_coverage.py  litify.yaml  lut.py  pyproject-core.toml  pyproject.toml  pyproject.toml.bak  run_all_tests.py  test_data_fix_report.md  test_installation.py  test_lut.py  test_reorganization_script.py  validate_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project_proposal.md
.github/workflows/: ci.yml  comprehensive-testing.yml  docker-publish.yml  publish.yml
analysis/: manager.py  run.py
analysis/classes/: FragmentBuilder.py  Interaction.py  Particle.py  ParticleFragment.py  TruthInteraction.py  TruthParticle.py  TruthParticleFragment.py  builders.py  predictor.py
config/: test_full_chain.yaml  test_io.cfg  test_loader.cfg  train_graph_spice.cfg  train_grappa_inter.cfg  train_grappa_shower.cfg  train_grappa_track.cfg  train_image_class.cfg  train_uresnet.cfg  train_uresnet_ppn.cfg
docker/: README.md  build.sh  test-me.Dockerfile
docker/spine/: Dockerfile  check-env.sh  setup.sh
docs/: README.md  build_docs.sh  requirements.txt  requirements_rtd.txt
docs/source/: conf.py  config_loader.rst  index.rst  installation.rst  quickstart.rst
mlreco/: README.md  __init__.py  driver.py  main.py  main_funcs.py  manager.py  model.py  train.py  trainval.py  version.py
mlreco/ana/: __init__.py  base.py  manager.py
mlreco/data/: base.py  crt.py  meta.py  neutrino.py  optical.py  particle.py  run_info.py  trigger.py
mlreco/data_structures/: __init__.py  base.py  crt.py  meta.py  neutrino.py  optical.py  particle.py  run_info.py  trigger.py
mlreco/io/: collate.py  dataset.py  datasets.py  factories.py  readers.py  sample.py  writers.py
mlreco/iotools/: __init__.py  collates.py  datasets.py  factories.py  readers.py  samplers.py  writers.py
mlreco/model/: README.md  bayes_uresnet.py  full_chain.py  grappa.py  manager.py  spice.py  transformer.py  uresnet.py  uresnet_ppn.py  vertex.py
mlreco/models/: .full_chain.py.swp  __init__.py  bayes_uresnet.py  factories.py  file_io.py  full_chain.py  graph_spice.py  grappa.py  manager.py  singlep.py  spice.py  uresnet.py  uresnet_ppn.py  uresnet_ppn_chain.py  vertex.py
mlreco/post/: __init__.py  base.py  manager.py
mlreco/utils/: ascii_logo.py  conditional.py  data_structures.py  dbscan.py  decorators.py  energy_loss.py  factory.py  geometry.py  ghost.py  globals.py  inference.py  logger.py  match.py  metrics.py  numba_local.py  particles.py  ppn.py  stopwatch.py  torch_local.py  train.py  units.py  unwrap.py  utils.py  weighting.py
mlreco/vis/: __init__.py  cluster.py  cone.py  detector.py  layout.py  point.py  training.py
mlreco/visualization/: analysis.py  cluster.py  cone.py  detector.py  detectors.py  ellipsoid.py  evaluation.py  gnn.py  layout.py  network.py  particle.py  particles.py  plotly_layouts.py
spine/: __init__.py  driver.py  main.py  version.py
spine/ana/: __init__.py  base.py  factories.py  manager.py  template.py
spine/data/: __init__.py  base.py  crt.py  list.py  meta.py  neutrino.py  optical.py  particle.py  run_info.py  trigger.py
spine/io/: README.md  augment.py  collate.py  (+4 more)
test/: conftest.py  pytest.ini  test_concurrent_download.py  test_conditional_imports.py  test_config.py  test_config_tool.py  test_download.py  test_driver.py  test_driver_import.py  test_full_chain_regression.py  test_image.py  test_loader.py  test_main.py  test_optional_io.py  test_package.py  test_watch_reset.py
(+1316 files in other folders)
